# BioMesh

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  ui.py
a2a/: __init__.py  client.py  executor.py  protocol.py  registry.py
agents/: __init__.py  analysis_agent.py  arxiv_agent.py  base.py  openfda_agent.py  orchestrator.py  summary_agent.py
app/: __init__.py  api.py
